--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "1.0.0",
   "private": true,
-  "description": "Типовой проект",
+  "description": "Мишка",
   "devDependencies": {
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
@@ -34,8 +34,5 @@
     "source/js/**/*.js",
     "source/img/**/*.svg",
     "source/sass/**/*.{sass,scss}"
-  ],
-  "engines": {
-    "node": "8.16"
-  }
+  ]
 }
